Assignment 1 for Reproducible Research

--- a/PA1_template.html
+++ b/PA1_template.html
@@ -269,7 +269,7 @@ zid[order(zid$zi, decreasing = TRUE), ][1, 2]
 ## 288 Levels: 0 10 100 1000 1005 1010 1015 1020 1025 1030 1035 1040 ... 955
 </code></pre>
 
-<h2>Imputing missing values</h2>
+<h2>Inputing missing values</h2>
 
 <p>Pre-processing for missing values</p>
 
